--- a/TeamThree/MASTER-master/model_strategy_testing.ipynb
+++ b/TeamThree/MASTER-master/model_strategy_testing.ipynb
@@ -14288,7 +14288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -14319,20 +14319,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File 'data/Output/TopN_LongShort_Marketcap_position.csv' found in the current directory.\n",
-      "         Date Ticker Position_Type       Shares    Weight\n",
-      "0  2024-08-01   AMGN          Long   535.230302  0.359172\n",
-      "1  2024-08-01   CTSH          Long   582.242845  0.088862\n",
-      "2  2024-08-01   ODFL          Long   193.838933  0.078776\n",
-      "3  2024-08-01   ADBE          Long   377.669366  0.412725\n",
-      "4  2024-08-01    WBD          Long  3607.738467  0.060466\n",
+      "File 'data/Output/Updated_Allocation.csv' found in the current directory.\n",
+      "         Date Ticker Position_Type      Shares  Weight\n",
+      "0  2024-07-15   ADBE         Short  176.769009     0.2\n",
+      "1  2024-07-15   ASML         Short   94.017656     0.2\n",
+      "2  2024-07-15   AVGO          Long  583.362508     0.2\n",
+      "3  2024-07-15   AXON          Long  324.002058     0.2\n",
+      "4  2024-07-15   BKNG         Short   24.461840     0.2\n",
       "Data successfully stored in tradingstrategy.dailytrading (table replaced if it existed).\n"
      ]
     }
@@ -14350,7 +14350,7 @@
     "db_name = \"QF5214\"\n",
     "engine = create_engine(f\"postgresql://{db_user}:{db_password}@{db_host}:{db_port}/{db_name}\")\n",
     "\n",
-    "file_name = \"data/Output/TopN_LongShort_Marketcap_position.csv\"\n",
+    "file_name = \"data/Output/Updated_Allocation.csv\"\n",
     "\n",
     "# Check if the file exists in the current folder\n",
     "if os.path.exists(file_name):\n",
@@ -14381,7 +14381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -14389,17 +14389,17 @@
      "output_type": "stream",
      "text": [
       "            Date Ticker Position_Type      Shares  Weight\n",
-      "0     2024-07-15   AVGO          Long  583.362508     0.2\n",
-      "1     2024-07-15   AXON          Long  324.002058     0.2\n",
-      "2     2024-07-15   PCAR          Long  956.480125     0.2\n",
-      "3     2024-07-15    TXN          Long  495.638396     0.2\n",
-      "4     2024-07-15   VRTX          Long  203.728224     0.2\n",
+      "0     2024-07-15   ADBE         Short  176.769009     0.2\n",
+      "1     2024-07-15   ASML         Short   94.017656     0.2\n",
+      "2     2024-07-15   AVGO          Long  583.362508     0.2\n",
+      "3     2024-07-15   AXON          Long  324.002058     0.2\n",
+      "4     2024-07-15   BKNG         Short   24.461840     0.2\n",
       "...          ...    ...           ...         ...     ...\n",
-      "1785  2025-03-31   TSLA         Short         NaN     0.2\n",
-      "1786  2025-03-31   COST         Short         NaN     0.2\n",
-      "1787  2025-03-31   GILD         Short         NaN     0.2\n",
-      "1788  2025-03-31   BKNG         Short         NaN     0.2\n",
-      "1789  2025-03-31   AMGN         Short         NaN     0.2\n",
+      "1785  2025-03-31   COST         Short         NaN     0.2\n",
+      "1786  2025-03-31   GILD         Short         NaN     0.2\n",
+      "1787  2025-03-31   AMGN         Short         NaN     0.2\n",
+      "1788  2025-03-31   AAPL         Short         NaN     0.2\n",
+      "1789  2025-03-31   VRTX         Short         NaN     0.2\n",
       "\n",
       "[1790 rows x 5 columns]\n"
      ]
