adjust for docker

--- a/TeamThree/MASTER-master/final_sentiment_strategy_test.ipynb
+++ b/TeamThree/MASTER-master/final_sentiment_strategy_test.ipynb
@@ -11874,7 +11874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 236,
    "metadata": {},
    "outputs": [
     {
@@ -11882,33 +11882,59 @@
      "output_type": "stream",
      "text": [
       "New positions added based on the latest predictions:\n",
-      "           Date Position_Type      Shares  Weight        Price  Trading_Price  \\\n",
-      "0    2024-07-15         Short  176.769009     0.2   565.710022     566.539978   \n",
-      "1    2024-07-15         Short   94.017656     0.2  1063.630005    1068.189941   \n",
-      "2    2024-07-15          Long  583.362508     0.2   171.419998     169.380005   \n",
-      "3    2024-07-15          Long  324.002058     0.2   308.640015     319.429993   \n",
-      "4    2024-07-15         Short   24.461840     0.2  4088.000000    4119.089844   \n",
-      "...         ...           ...         ...     ...          ...            ...   \n",
-      "1785 2025-03-31         Short         NaN     0.2          NaN            NaN   \n",
-      "1786 2025-03-31         Short         NaN     0.2          NaN            NaN   \n",
-      "1787 2025-03-31         Short         NaN     0.2          NaN            NaN   \n",
-      "1788 2025-03-31         Short         NaN     0.2          NaN            NaN   \n",
-      "1789 2025-03-31         Short         NaN     0.2          NaN            NaN   \n",
+      "                            Date        Open        High         Low  \\\n",
+      "0      2022-01-03 00:00:00+00:00  566.650024  575.000000  553.270020   \n",
+      "1      2022-01-04 00:00:00+00:00  563.900024  564.299988  541.309998   \n",
+      "2      2022-01-05 00:00:00+00:00  535.000000  538.750000  514.000000   \n",
+      "3      2022-01-06 00:00:00+00:00  510.000000  526.309998  508.200012   \n",
+      "4      2022-01-07 00:00:00+00:00  513.659973  520.419983  504.000000   \n",
+      "...                          ...         ...         ...         ...   \n",
+      "81451        2025-03-31 00:00:00         NaN         NaN         NaN   \n",
+      "81452        2025-03-31 00:00:00         NaN         NaN         NaN   \n",
+      "81453        2025-03-31 00:00:00         NaN         NaN         NaN   \n",
+      "81454        2025-03-31 00:00:00         NaN         NaN         NaN   \n",
+      "81455        2025-03-31 00:00:00         NaN         NaN         NaN   \n",
       "\n",
-      "     Ticker  \n",
-      "0      ADBE  \n",
-      "1      ASML  \n",
-      "2      AVGO  \n",
-      "3      AXON  \n",
-      "4      BKNG  \n",
-      "...     ...  \n",
-      "1785   COST  \n",
-      "1786   GILD  \n",
-      "1787   AMGN  \n",
-      "1788   AAPL  \n",
-      "1789   VRTX  \n",
+      "            Close     Volume    Market_Cap Ticker IndClass_Sector  \\\n",
+      "0      564.369995  2862700.0  1.918454e+11   ADBE      Technology   \n",
+      "1      554.000000  4344800.0  1.918454e+11   ADBE      Technology   \n",
+      "2      514.429993  7394800.0  1.918454e+11   ADBE      Technology   \n",
+      "3      514.119995  3913600.0  1.918454e+11   ADBE      Technology   \n",
+      "4      510.700012  3605400.0  1.918454e+11   ADBE      Technology   \n",
+      "...           ...        ...           ...    ...             ...   \n",
+      "81451         NaN        NaN           NaN   COST            <NA>   \n",
+      "81452         NaN        NaN           NaN   GILD            <NA>   \n",
+      "81453         NaN        NaN           NaN   AMGN            <NA>   \n",
+      "81454         NaN        NaN           NaN   AAPL            <NA>   \n",
+      "81455         NaN        NaN           NaN   VRTX            <NA>   \n",
       "\n",
-      "[1790 rows x 7 columns]\n"
+      "            IndClass_Industry  Typical_Price    Return      VWAP_5  Weight  \\\n",
+      "0      Software - Application     564.213338       NaN         NaN     NaN   \n",
+      "1      Software - Application     553.203328 -0.018374         NaN     NaN   \n",
+      "2      Software - Application     522.393331 -0.071426         NaN     NaN   \n",
+      "3      Software - Application     516.210002 -0.000603         NaN     NaN   \n",
+      "4      Software - Application     511.706665 -0.006652  531.020881     NaN   \n",
+      "...                       ...            ...       ...         ...     ...   \n",
+      "81451                    <NA>            NaN       NaN         NaN     0.2   \n",
+      "81452                    <NA>            NaN       NaN         NaN     0.2   \n",
+      "81453                    <NA>            NaN       NaN         NaN     0.2   \n",
+      "81454                    <NA>            NaN       NaN         NaN     0.2   \n",
+      "81455                    <NA>            NaN       NaN         NaN     0.2   \n",
+      "\n",
+      "      Position_Type  \n",
+      "0               NaN  \n",
+      "1               NaN  \n",
+      "2               NaN  \n",
+      "3               NaN  \n",
+      "4               NaN  \n",
+      "...             ...  \n",
+      "81451         Short  \n",
+      "81452         Short  \n",
+      "81453         Short  \n",
+      "81454         Short  \n",
+      "81455         Short  \n",
+      "\n",
+      "[81456 rows x 15 columns]\n"
      ]
     }
    ],
@@ -12426,7 +12452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [
     {
