--- a/TeamThree/MASTER-master/model_strategy_testing.ipynb
+++ b/TeamThree/MASTER-master/model_strategy_testing.ipynb
@@ -14319,7 +14319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -14381,27 +14381,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "            Date Ticker Position_Type      Shares  Weight\n",
-      "0     2024-07-15   ADBE         Short  176.769009     0.2\n",
-      "1     2024-07-15   ASML         Short   94.017656     0.2\n",
-      "2     2024-07-15   AVGO          Long  583.362508     0.2\n",
-      "3     2024-07-15   AXON          Long  324.002058     0.2\n",
-      "4     2024-07-15   BKNG         Short   24.461840     0.2\n",
-      "...          ...    ...           ...         ...     ...\n",
-      "1785  2025-03-31   COST         Short         NaN     0.2\n",
-      "1786  2025-03-31   GILD         Short         NaN     0.2\n",
-      "1787  2025-03-31   AMGN         Short         NaN     0.2\n",
-      "1788  2025-03-31   AAPL         Short         NaN     0.2\n",
-      "1789  2025-03-31   VRTX         Short         NaN     0.2\n",
+      "           Date Ticker Position_Type      Shares  Weight\n",
+      "0    2024-07-15   ADBE         Short  176.769009     0.2\n",
+      "1    2024-07-15   ASML         Short   94.017656     0.2\n",
+      "2    2024-07-15   AVGO          Long  583.362508     0.2\n",
+      "3    2024-07-15   AXON          Long  324.002058     0.2\n",
+      "4    2024-07-15   BKNG         Short   24.461840     0.2\n",
+      "...         ...    ...           ...         ...     ...\n",
+      "1795 2025-04-01   TSLA         Short         NaN     0.2\n",
+      "1796 2025-04-01   ROST         Short         NaN     0.2\n",
+      "1797 2025-04-01   VRTX         Short         NaN     0.2\n",
+      "1798 2025-04-01   COST         Short         NaN     0.2\n",
+      "1799 2025-04-01    ROP         Short         NaN     0.2\n",
       "\n",
-      "[1790 rows x 5 columns]\n"
+      "[1800 rows x 5 columns]\n"
      ]
     }
    ],
