--- a/TeamThree/MASTER-master/model_strategy_testing.ipynb
+++ b/TeamThree/MASTER-master/model_strategy_testing.ipynb
@@ -14381,7 +14381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
@@ -14395,13 +14395,13 @@
       "3    2024-07-15   AXON          Long  324.002058     0.2\n",
       "4    2024-07-15   BKNG         Short   24.461840     0.2\n",
       "...         ...    ...           ...         ...     ...\n",
-      "1795 2025-04-01   TSLA         Short         NaN     0.2\n",
-      "1796 2025-04-01   ROST         Short         NaN     0.2\n",
-      "1797 2025-04-01   VRTX         Short         NaN     0.2\n",
-      "1798 2025-04-01   COST         Short         NaN     0.2\n",
-      "1799 2025-04-01    ROP         Short         NaN     0.2\n",
+      "1825 2025-04-03   BKNG         Short         NaN     0.2\n",
+      "1826 2025-04-03   COST         Short         NaN     0.2\n",
+      "1827 2025-04-03   ROST         Short         NaN     0.2\n",
+      "1828 2025-04-03   VRSK         Short         NaN     0.2\n",
+      "1829 2025-04-03   CRWD         Short         NaN     0.2\n",
       "\n",
-      "[1800 rows x 5 columns]\n"
+      "[1830 rows x 5 columns]\n"
      ]
     }
    ],
@@ -14411,8 +14411,10 @@
     "\n",
     "# PostgreSQL connection settings\n",
     "db_user = \"postgres\"\n",
-    "db_password = \"qf5214\"\n",
-    "db_host = \"134.122.167.14\"\n",
+    "#db_password = \"qf5214\"\n",
+    "db_password = \"qf5214G8\"\n",
+    "#db_host = \"134.122.167.14\"\n",
+    "db_host = \"pgm-t4n365kyk1sye1l7eo.pgsql.singapore.rds.aliyuncs.com\"\n",
     "db_port = 5555\n",
     "db_name = \"QF5214\"\n",
     "engine = create_engine(f\"postgresql://{db_user}:{db_password}@{db_host}:{db_port}/{db_name}\")\n",
